Bug 1388123 - Make autocomplete handle Enter on keydown. r=MattN

Some pages, like the Google login form, submit information on keydown, that
causes us to not autocomplete, because we handle keypress instead.
The patch changes autocomplete to happen on keydown.
Unfortunately formautofill also uses keydown and tries to access popup data too
late, thus it needs some hacks to work properly.
In general the formautofill code has too many indirections due to e10s, and that
makes the fix more fragile than we'd want. Ideally content autocomplete should
have its own codebase, rather than sharing the same controller as chrome code.

MozReview-Commit-ID: oAyASmDFm1

--HG--
extra : rebase_source : 64c1e7c85b203904b59e3a1e019e7f52f290cfea